@@ -60,6 +60,7 @@ Template for new versions:
 - `buildingplan`: improved performance in forts with large numbers of items
 - System clipboard: when pasting single lines from the system clipboard, replace newlines with spaces so they don't show up as strange CP437 glyphs in-game
 - `exterminate`: don't kill friendly undead (unless ``--include-friendly`` is passed) when specifying ``undead`` as the target
+- `orders`: compact and properly hide workers tab overlay while adding stockpile links
 
 ## Misc Improvements
 
